--- a/frontend/tictactoe/src/App.css
+++ b/frontend/tictactoe/src/App.css
@@ -25,16 +25,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0;
-  margin: 0;
+  padding: 20px;
 }
+
 
 #root {
   max-width: var(--max-width);
   width: 100%;
-  height: 100%;
-  display: flex;
-  margin: 0 0;
-  padding: 0 0;
+  margin: 0 auto;
   text-align: center;
 }
