--- a/frontend/tictactoe/src/pages/registrationPage/registrationPage.module.css
+++ b/frontend/tictactoe/src/pages/registrationPage/registrationPage.module.css
@@ -22,47 +22,9 @@
   margin-bottom: 20px;
 }
 
-.input {
-  width: 100%;
-  padding: 12px;
+.error {
+  color: red;
   margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: var(--border-radius);
-  font-size: 14px;
-  color: var(--text-color);
+  font-weight: bold;
 }
 
-.button {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 12px;
-  border: none;
-  border-radius: var(--border-radius);
-  cursor: pointer;
-  font-weight: var(--font-weight-semibold);
-  font-size: 16px;
-  transition: background 0.3s;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #0a75c2;
-}
-
-.loginButton {
-  margin-top: 15px;
-  background-color: var(--primary-color);
-  color: white;
-  padding: 12px;
-  border: none;
-  border-radius: var(--border-radius);
-  cursor: pointer;
-  font-weight: var(--font-weight-semibold);
-  font-size: 16px;
-  transition: background 0.3s;
-  width: 100%;
-}
-
-.loginButton:hover {
-  background-color: #0a75c2;
-}
