--- a/frontend/tictactoe/src/pages/gameListPage/gameListPage.module.css
+++ b/frontend/tictactoe/src/pages/gameListPage/gameListPage.module.css
@@ -19,6 +19,12 @@
   align-items: center;
 }
 
+.error {
+  color: red;
+  margin: 10px 0;
+  font-weight: bold;
+}
+
 .headerButton {
   flex: none;
 }
