--- a/frontend/tictactoe/src/pages/gamePage/components/gameLog.module.css
+++ b/frontend/tictactoe/src/pages/gamePage/components/gameLog.module.css
@@ -3,29 +3,54 @@
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-  min-width: 90vh;
-  overflow-y: auto;
+  min-width: 300px; /* Минимальная ширина */
+  max-height: 90vh; /* Максимальная высота */
+  overflow-y: auto; /* Прокрутка по вертикали */
   display: flex;
-  justify-content: center;
-  align-items: start;
+  flex-direction: column; /* Элементы идут вертикально */
+  align-items: center; /* Центрирование по горизонтали */
+  border: 1px solid #e0e0e0;
 }
 
 .logContent {
-  background-color: #dcdcdc;
-  border-radius: 8px;
-  padding: 10px;
-  width: 90%;
-  max-width: 500px;
-  text-align: start;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  width: 100%; /* Ширина контейнера с логами */
+  max-width: 500px; /* Максимальная ширина */
+  display: flex;
+  flex-direction: column; /* Элементы внутри идут вертикально */
+  gap: 10px; /* Отступ между записями */
 }
 
 .logEntry {
   padding: 10px;
   font-size: 16px;
   font-weight: 600;
+  border-radius: 4px;
+  display: flex;
+  align-items: baseline;
+  gap: 1rem;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.logEntry:last-child {
-  border-bottom: none;
-} 
+.timestamp {
+  color: #757575;
+  font-size: 0.8em;
+}
+
+.message {
+  flex-grow: 1;
+}
+
+
+.move {
+  background-color: #e3f2fd;
+}
+.join {
+  background-color: #e8f5e9;
+}
+.leave {
+  background-color: #ffebee;
+}
+.system {
+  background-color: #f5f5f5;
+}
